fix: fix update beach
